# mayaUSDExportPlugin

./: .gitIgnore  CMakeLists.txt  creatprimvar  list.cpp  maya_run.py  pythonpaths.txt
cmake/: TargetBuild.cmake
cmake/modules/: FindMaya.cmake
